@@ -1,3 +1,7 @@
+2012-01-30  Jesse Kornblum  <research@jessekornblum.com:>
+
+	* src/display.cpp: Reverted previous change, but updated test for presence of vasprintf.
+
 2012-01-29  Jesse Kornblum  <research@jessekornblum.com>:
 
 	* src/dig.cpp: Check for junction points before adding files to queue
@@ -42,7 +46,7 @@
 	* Makefile.am: Changed rule for converting man pages to Windows text files
 
 2012-01-06  Jesse Kornblum <research@jessekornblum.com>
-	
+
 	* configure.ac: Version bump to 4.0.0
 	* src/hashlist.cpp: Legibility changes only.
 	* doc/Makefile: Updating man page locations
